typo fix + year change

--- a/index.prod.html
+++ b/index.prod.html
@@ -22,13 +22,13 @@
     <meta property="og:title" content="Bernard Vignal, auteur-compositeur de chansons françaises" />
     <meta property="og:type" content="music.song" />
     <meta property="og:url" content="https://bernardvignal.fr/" />
-    <meta property="og:image" content="assets/img/header-bg.jpg" />
+    <meta property="og:image" content="https://media-6af8.kxcdn.com/assets/img/header-bg.jpg" />
     
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://media-6af8.kxcdn.com/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://media-6af8.kxcdn.com/assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Droid+Serif:400,700,400italic,700italic|Dancing+Script:400,700|Roboto+Slab:400,100,300,700"
           rel="stylesheet" type="text/css">
-    <link href="assets/css/agency.css" rel="stylesheet">
+    <link href="https://media-6af8.kxcdn.com/assets/css/agency.min.v105.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -36,7 +36,7 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="https://media-6af8.kxcdn.com/assets/favicon.ico"/>
 </head>
 
 <body id="page-top" class="index">
@@ -113,7 +113,7 @@
 <section id="team" class="bg-light-gray">
     <div id="team-member-bubbles">
         <div class="hero">
-            <img data-src="assets/img/team-bg-768w.jpg" title="Bernard Vignal, les membres du groupe"
+            <img data-src="https://media-6af8.kxcdn.com/assets/img/team-bg-768w.jpg" title="Bernard Vignal, les membres du groupe"
                  class="lazyload team-no-hero"/>
             <div class="team-member-bubble team-member-outerLeft">
                 <a href="#teamMemberOuterLeft" data-toggle="modal">
@@ -174,7 +174,7 @@
                                 <i class="fa fa-expand fa-3x"></i>
                             </div>
                         </div>
-                        <img data-src="assets/img/gallery/2-preview.jpg"
+                        <img data-src="https://media-6af8.kxcdn.com/assets/img/gallery/2-preview.jpg"
                              class="fullwidth lazyload img-responsive"
                              alt="Le groupe sur scène">
                     </a>
@@ -183,7 +183,7 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="team-member team-member-1">
-                        <img data-src="assets/img/team/p1-final.jpg"
+                        <img data-src="https://media-6af8.kxcdn.com/assets/img/team/p1-final.jpg"
                              class="lazyload img-responsive img-circle"
                              alt="Bernard Vignal">
                         <h3>Bernard <span class="text-uppercase">Vignal</span></h3>
@@ -192,7 +192,7 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="team-member team-member-2">
-                        <img data-src="assets/img/team/p2-final.jpg"
+                        <img data-src="https://media-6af8.kxcdn.com/assets/img/team/p2-final.jpg"
                              class="lazyload img-responsive img-circle" alt="Emmanuel Mégier">
                         <h3>Emmanuel <span class="text-uppercase">Mégier</span></h3>
                         <p class="text-muted">Guitare, Cajon</p>
@@ -202,7 +202,7 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="team-member team-member-3">
-                        <img data-src="assets/img/team/p3-final.jpg"
+                        <img data-src="https://media-6af8.kxcdn.com/assets/img/team/p3-final.jpg"
                              class="lazyload img-responsive img-circle" alt="Cécile Chabert">
                         <h3>Cécile <span class="text-uppercase">Chabert</span></h3>
                         <p class="text-muted">Voix</p>
@@ -210,7 +210,7 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="team-member team-member-4">
-                        <img data-src="assets/img/team/p4-final.jpg"
+                        <img data-src="https://media-6af8.kxcdn.com/assets/img/team/p4-final.jpg"
                              class="lazyload img-responsive img-circle" alt="Muriel Roger">
                         <h3>Muriel <span class="text-uppercase">Roger</span></h3>
                         <p class="text-muted">Voix</p>
@@ -230,7 +230,7 @@
                     <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-no-pd">
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member team-member-4">
-                                <img data-src="assets/img/team/p4-final.jpg"
+                                <img data-src="https://media-6af8.kxcdn.com/assets/img/team/p4-final.jpg"
                                      class="lazyload img-responsive img-circle"
                                      alt="Muriel Roger">
                                 <h3>Muriel <span class="text-uppercase">Roger</span></h3>
@@ -255,7 +255,7 @@
                     <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-no-pd">
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member team-member-3">
-                                <img data-src="assets/img/team/p3-final.jpg"
+                                <img data-src="https://media-6af8.kxcdn.com/assets/img/team/p3-final.jpg"
                                      class="lazyload img-responsive img-circle"
                                      alt="Cécile Chabert">
                                 <h3>Cécile <span class="text-uppercase">Chabert</span></h3>
@@ -280,7 +280,7 @@
                     <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-no-pd">
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member team-member-1">
-                                <img data-src="assets/img/team/p1-final.jpg"
+                                <img data-src="https://media-6af8.kxcdn.com/assets/img/team/p1-final.jpg"
                                      class="lazyload img-responsive img-circle"
                                      alt="Bernard Vignal">
                                 <h3>Bernard <span class="text-uppercase">Vignal</span></h3>
@@ -305,7 +305,7 @@
                     <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-no-pd">
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member team-member-2">
-                                <img data-src="assets/img/team/p2-final.jpg"
+                                <img data-src="https://media-6af8.kxcdn.com/assets/img/team/p2-final.jpg"
                                      class="lazyload img-responsive img-circle"
                                      alt="Emmanuel Mégier team-member-2">
                                 <h3>Emmanuel <span class="text-uppercase">Mégier</span></h3>
@@ -344,7 +344,7 @@
                                 <h2>Ecoutez nos extraits en exclusivité</h2>
                                 <audio class="lazyload" id="audio" tabindex="0" preload="none" controls="controls">
                                     <source type="audio/mp3"
-                                            src="assets/audio/1-approche.mp3"/>
+                                            src="https://media-6af8.kxcdn.com/assets/audio/1-approche.mp3"/>
                                     <div class="audio-no-html5">
                                         <p>Désolé, votre navigateur ne permet pas de jouer notre musique.
                                             Veuillez télécharger l'un des navigateurs ci-dessous :
@@ -362,19 +362,19 @@
                                 <div class="playlist-controls"></div>
                                 <ul id="playlist">
                                     <li class="audio-track audio-track-even active">
-                                        <a href="assets/audio/1-approche.mp3">
+                                        <a href="https://media-6af8.kxcdn.com/assets/audio/1-approche.mp3">
                                             <i class="fa fa-play" aria-hidden="true"></i>
                                             <span class="audio-track-name">Approche, Approche</span>
                                         </a>
                                     </li>
                                     <li class="audio-track audio-track-odd">
-                                        <a href="assets/audio/2-un-beau-tresor.mp3">
+                                        <a href="https://media-6af8.kxcdn.com/assets/audio/2-un-beau-tresor.mp3">
                                             <i class="fa fa-play" aria-hidden="true"></i>
                                             <span>Un beau trésor</span>
                                         </a>
                                     </li>
                                     <li class="audio-track audio-track-even">
-                                        <a href="assets/audio/3-le-blues-du-cycliste.mp3">
+                                        <a href="https://media-6af8.kxcdn.com/assets/audio/3-le-blues-du-cycliste.mp3">
                                             <i class="fa fa-play" aria-hidden="true"></i>
                                             <span>Le blues du cycliste</span>
                                         </a>
@@ -393,7 +393,7 @@
                                 <i class="fa fa-expand fa-3x"></i>
                             </div>
                         </div>
-                        <img data-src="assets/img/gallery/1-preview.jpg"
+                        <img data-src="https://media-6af8.kxcdn.com/assets/img/gallery/1-preview.jpg"
                              class="lazyload img-responsive" width="250px"
                              alt="Cécile Chabert et Muriel Roger">
                     </a>
@@ -405,7 +405,7 @@
                                 <i class="fa fa-expand fa-3x"></i>
                             </div>
                         </div>
-                        <img data-src="assets/img/gallery/4-preview.jpg"
+                        <img data-src="https://media-6af8.kxcdn.com/assets/img/gallery/4-preview.jpg"
                              class="lazyload img-responsive" width="250px"
                              alt="Bernard Vignal et Emmanuel Megier">
                     </a>
@@ -581,7 +581,7 @@
                         <div class="modal-body modal-body-no-pd">
                             <div class="img-wrapper">
                                 <img class="lazyload img-responsive img-centered"
-                                     data-src="assets/img/gallery/1.jpg"
+                                     data-src="https://media-6af8.kxcdn.com/assets/img/gallery/1.jpg"
                                      alt="Cécile Chabert et Muriel Roger chantent ensemble.">
                             </div>
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
@@ -611,7 +611,7 @@
                         <div class="modal-body modal-body-no-pd">
                             <div class="img-wrapper">
                                 <img class="lazyload img-responsive img-centered"
-                                     data-src="assets/img/gallery/2.jpg"
+                                     data-src="https://media-6af8.kxcdn.com/assets/img/gallery/2.jpg"
                                      alt="En scène, le groupe Bernard Vignal montre son talent">
                             </div>
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
@@ -641,7 +641,7 @@
                         <div class="modal-body modal-body-no-pd">
                             <div class="img-wrapper">
                                 <img class="lazyload img-responsive img-centered"
-                                     data-src="assets/img/gallery/4.jpg"
+                                     data-src="https://media-6af8.kxcdn.com/assets/img/gallery/4.jpg"
                                      alt="Que de plaisir à jouer pour Bernard Vignal et Emmanuel Mégier">
                             </div>
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
@@ -670,12 +670,12 @@
                         <div class="modal-body modal-body-no-pd">
                             <div class="img-wrapper">
                                 <img class="lazyload img-responsive img-centered"
-                                     data-src="assets/img/gallery/7.jpg"
+                                     data-src="https://media-6af8.kxcdn.com/assets/img/gallery/7.jpg"
                                      alt="Les enfants chantent avec Muriel pendant que Bernard et Emmanuel jouent.">
                             </div>
                             <div class="img-wrapper">
                                 <img class="lazyload img-responsive img-centered"
-                                     data-src="assets/img/gallery/6.jpg"
+                                     data-src="https://media-6af8.kxcdn.com/assets/img/gallery/6.jpg"
                                      alt="Le groupe Bernard Vignal anime le concert.">
                             </div>
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
@@ -937,14 +937,14 @@
 </script>
 <script async src="https://www.google.com/recaptcha/api.js?hl=fr"></script>
 
-<!--<script src="assets/vendor/lazysizes/lazysizes.min.js" async=""></script>-->
-<!--<script src="assets/vendor/jquery/jquery.min.js"></script>-->
-<!--<script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>-->
-<!--<script src="assets/js/jqBootstrapValidation.js"></script>-->
-<!--<script src="assets/js/contact_me.js"></script>-->
+<!--<script src="https://media-6af8.kxcdn.com/assets/vendor/lazysizes/lazysizes.min.js" async=""></script>-->
+<!--<script src="https://media-6af8.kxcdn.com/assets/vendor/jquery/jquery.min.js"></script>-->
+<!--<script src="https://media-6af8.kxcdn.com/assets/vendor/bootstrap/js/bootstrap.min.js"></script>-->
+<!--<script src="https://media-6af8.kxcdn.com/assets/js/jqBootstrapValidation.js"></script>-->
+<!--<script src="https://media-6af8.kxcdn.com/assets/js/contact_me.js"></script>-->
 
-<script src="assets/vendor/vendor.min.js"></script>
-<script async src="assets/js/agency.min.js"></script>
+<script src="https://media-6af8.kxcdn.com/assets/vendor/vendor.min.js"></script>
+<script async src="https://media-6af8.kxcdn.com/assets/js/agency.min.js"></script>
 </body>
 
 </html>
