--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="team-member-bubble team-member-outerLeft">
                 <a href="#teamMemberOuterLeft" data-toggle="modal">
                     <span class="fa-stack fa-lg">
-                        <i class="fa fa-circle fa-stack-1x"></i>
+                        <i class="fa fa-commenting-o fa-stack-1x"></i>
                         <i class="fa fa-commenting fa-stack-1x"></i>
                     </span>
                 </a>
@@ -430,14 +430,51 @@
                                 <span><i>Les ateliers seront menés par un membre du groupe,</i></span>
                                 <span><u>Spécialiste des choeurs d'enfants.</u></span>
                             </p>
+                        </div>
+                        <div class="col-xs-12">
+                            <h2 class="section-heading">A venir</h2>
+                            <ul id="experiences-future">
+                                <!-- addition of 09/2017 -->
+                                <li class="xp-link coming-soon">
+                                    <div title="Bernard Vignal à la mairie de Saint Avit">
+                                        <span>7 décembre 2017 à la médiathèque de Feyzin :<br/> programme des chansons du spectacle joué par l'école de musique de Feyzin (69)</span>
+                                    </div>
+                                </li>
+                                <li class="xp-link coming-soon">
+                                    <div title="Bernard Vignal à la mairie de Saint Avit">
+                                        <span>25 octobre 2017 :<br/> Concert tout public pour une fête intergénérationnelle organisée par la Com.Com<br/>Nord Drôme/Ardèche à Saint Sorlin en Valloire (26)</span>
+                                    </div>
+                                </li>
+                            </ul>
                             <a href="#experiences" class="page-scroll next-button">
                                 <i class="fa fa-angle-double-down text-center"></i>
                             </a>
 
-                        </div>
-                        <div class="col-xs-12">
                             <h2 class="section-heading">Nos expériences passées</h2>
                             <ul id="experiences">
+                                <!-- addition of 09/2017 -->
+                                <li class="xp-link">
+                                    <div title="Bernard Vignal au fort de Feyzin">
+                                        <span>
+                                            25 juin 2017 au fort de Feyzin : <br/> programme des chansons du spectacle joué par l'école de musique de Feyzin (69)
+                                        </span>
+                                    </div>
+                                </li>
+                                <li class="xp-link">
+                                    <div title="Bernard Vignal à la mairie de Saint Avit">
+                                        <span>23 juin 2017 : <br/>concert tout public à la mairie de Saint Avit (26)</span>
+                                    </div>
+                                </li>
+                                <li class="xp-link">
+                                    <div title="Bernard Vignal en privé à Lyon">
+                                        <span>9 juin 2017 : <br/>concert à domicile Lyon 7è (69)</span>
+                                    </div>
+                                </li>
+                                <li class="xp-link">
+                                    <div title="Bernard Vignal à Vienne">
+                                        <span>29 avril 2017 : <br/>concert à la médiathèque de Vienne (38)</span>
+                                    </div>
+                                </li>
                                 <li class="xp-link">
                                     <a href="#experienceModal1" data-toggle="modal"
                                        title="Concert Bernard Vignal à Varennes-les-Mâcon">
