--- a/index.html
+++ b/index.html
@@ -437,11 +437,6 @@
                                 <!-- addition of 09/2017 -->
                                 <li class="xp-link coming-soon">
                                     <div title="Bernard Vignal à la mairie de Saint Avit">
-                                        <span>7 décembre 2017 à la médiathèque de Feyzin :<br/> programme des chansons du spectacle joué par l'école de musique de Feyzin (69)</span>
-                                    </div>
-                                </li>
-                                <li class="xp-link coming-soon">
-                                    <div title="Bernard Vignal à la mairie de Saint Avit">
                                         <span>25 octobre 2017 :<br/> Concert tout public pour une fête intergénérationnelle organisée par la Com.Com<br/>Nord Drôme/Ardèche à Saint Sorlin en Valloire (26)</span>
                                     </div>
                                 </li>
@@ -454,10 +449,13 @@
                             <ul id="experiences">
                                 <!-- addition of 09/2017 -->
                                 <li class="xp-link">
-                                    <div title="Bernard Vignal au fort de Feyzin">
+                                    <div title="Bernard Vignal à la mairie de Saint Avit">
                                         <span>
-                                            25 juin 2017 au fort de Feyzin : <br/> programme des chansons du spectacle joué par l'école de musique de Feyzin (69)
-                                        </span>
+                                            7 décembre 2017 à la médiathèque de Feyzin<br/>
+                                            et<br/>
+                                            25 juin 2017 au fort de Feyzin :<br/>
+                                            programme des chansons du spectacle joué par l'école de musique de Feyzin (69)
+										</span>
                                     </div>
                                 </li>
                                 <li class="xp-link">
