--- a/index.prod.html
+++ b/index.prod.html
@@ -436,8 +436,13 @@
                             <ul id="experiences-future">
                                 <!-- addition of 09/2017 -->
                                 <li class="xp-link coming-soon">
-                                    <div title="Bernard Vignal à la mairie de Saint Avit">
+                                    <div title="Bernard Vignal à Saint Sorlin en Valloire">
                                         <span>25 octobre 2017 :<br/> Concert tout public pour une fête intergénérationnelle organisée par la Com.Com<br/>Nord Drôme/Ardèche à Saint Sorlin en Valloire (26)</span>
+                                    </div>
+                                </li>
+                                <li class="xp-link coming-soon">
+                                    <div title="Bernard Vignal à Feyzin">
+                                        <span>16 novembre 2017 :<br/> Concert scolaire salle du REX à Feyzin (69)</span>
                                     </div>
                                 </li>
                             </ul>
